Almost complete the lab, Need to implement routes building
